# chatrouter-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  server.rs  utils.rs
