[package]
name = "chatrouter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
http = "1.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
